Fix layout problems

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -3,6 +3,12 @@
 	padding-bottom: 1.25rem;
 	z-index: 50;
 	background-color: var(--bg-light);
+
+	@include mediaUp(md) {
+		width: 16rem;
+		flex-shrink: 0;
+		flex-grow: 0;
+	}
 }
 
 .header__container {
